# fakenigma

./: LICENSE  README.md  pyproject.toml
src/: enigma.py
